# tontine

./: README.md  algebra.ipynb  portfolio.py  pyproject.toml
data/: AG2022prob.xlsx
notebooks/: algebra.ipynb  risk_aversion_analysis.ipynb
output/: results.csv
scripts/: optimise.py
tontine/: context.py  data.py  instruments.py  jacobian.py  payoffs.py  portfolio.py  utils.py
