[tool.poetry]
name = "tontine"
version = "0.1.0"
description = ""
authors = ["Othman El Hammouchi <othman.el.hammouchi@protonmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
numpy = "^2.0.1"
scipy = "^1.14.0"
sympy = "^1.13.1"
ipython = "^8.26.0"
ipykernel = "^6.29.5"
pandas = "^2.2.2"
matplotlib = "^3.9.1"
openpyxl = "^3.1.5"
jupyter = "^1.0.0"
nbconvert = "^7.16.4"
cython = "^3.0.10"
werkzeug = "^3.0.3"
dill = "^0.3.8"
remote-pdb = "^2.1.0"
ipdb = "^0.13.13"
py-spy = "^0.3.14"
tqdm = "^4.66.4"
seaborn = "^0.13.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
